--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 alabaster==0.7.9
 Babel==2.3.4
+click==6.6
 docutils==0.13.1
+Flask==0.12
+Flask-SQLAlchemy==2.1
 imagesize==0.7.1
+itsdangerous==0.24
 Jinja2==2.8.1
 MarkupSafe==0.23
 packaging==16.8
@@ -15,3 +19,5 @@ snowballstemmer==1.2.1
 Sphinx==1.5.1
 sphinx-bootstrap-theme==0.4.13
 sphinx-rtd-theme==0.1.9
+SQLAlchemy==1.1.4
+Werkzeug==0.11.15
