--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 alabaster==0.7.9
 Babel==2.3.4
-click==6.6
+click==6.7
 docutils==0.13.1
 Flask==0.12
+Flask-Cors==3.0.2
 Flask-SQLAlchemy==2.1
 imagesize==0.7.1
 itsdangerous==0.24
-Jinja2==2.8.1
+Jinja2==2.9.4
 MarkupSafe==0.23
 packaging==16.8
 pip-review==0.5
@@ -20,4 +21,5 @@ Sphinx==1.5.1
 sphinx-bootstrap-theme==0.4.13
 sphinx-rtd-theme==0.1.9
 SQLAlchemy==1.1.4
+tinydb==3.2.2
 Werkzeug==0.11.15
